# CourierMan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  xmake.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  help_request.yml
.github/workflows/: ci-build-test.yml  codeql.yml  release-publish.yml
deploy/docker/: Dockerfile.build
deploy/installers/: windows_installer.nsi
resources/: LICENSE  resources.qrc
resources/styles/: courierman.qss
src/app/: main.cpp
src/backend/common/: ApiTypes.h  AutoStartManager.cpp  AutoStartManager.h  EnvironmentResolver.cpp  EnvironmentResolver.h  FeatureCatalog.cpp  FeatureCatalog.h  IssueReporter.cpp  IssueReporter.h  ScriptRunner.cpp  ScriptRunner.h  SnippetGenerator.cpp  SnippetGenerator.h
src/backend/database/: DatabaseManager.cpp  DatabaseManager.h
src/core/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  Result.h
src/network/rest/: RestClient.cpp  RestClient.h
src/ui/dialogs/: UpdateDialog.cpp  UpdateDialog.h
src/ui/main/: MainWindow.cpp  MainWindow.h  TitleBar.cpp  TitleBar.h
src/ui/settings/: SettingsView.cpp  SettingsView.h
src/ui/shared_widgets/: HoverButton.cpp  HoverButton.h  IconFactory.cpp  IconFactory.h  ThemeManager.cpp  ThemeManager.h
tests/: main.cpp
tests/backend/: DatabaseManagerTests.cpp  EnvironmentResolverTests.cpp  FeatureCatalogTests.cpp  IssueReporterTests.cpp  ScriptRunnerTests.cpp  SnippetGeneratorTests.cpp
tests/core/: ConfigManagerTests.cpp
tests/support/gtest/: gtest.h
